--- a/SGMC/web/WEB-INF/web.xml
+++ b/SGMC/web/WEB-INF/web.xml
@@ -65,7 +65,6 @@
         <servlet-class>controller.ManterDevolucaoController</servlet-class>
     </servlet>
     <servlet>
-<<<<<<< Updated upstream
         <servlet-name>ManterItensVendaController</servlet-name>
         <servlet-class>controller.ManterItensVendaController</servlet-class>
     </servlet>
@@ -80,11 +79,12 @@
     <servlet>
         <servlet-name>PesquisaItensOrdemController</servlet-name>
         <servlet-class>controller.PesquisaItensOrdemController</servlet-class>
-=======
-        <servlet-name>ManterEnderecoController</servlet-name>
-        <servlet-class>controller.ManterEnderecoController</servlet-class>
     </servlet>
     <servlet>
+    <servlet-name>ManterEnderecoController</servlet-name>
+        <servlet-class>controller.ManterEnderecoController</servlet-class>
+    </servlet>
+        <servlet>
         <servlet-name>ManterCategoriaController</servlet-name>
         <servlet-class>controller.ManterCategoriaController</servlet-class>
     </servlet>
@@ -103,7 +103,6 @@
     <servlet>
         <servlet-name>PesquisaEnderecoController</servlet-name>
         <servlet-class>controller.PesquisaEnderecoController</servlet-class>
->>>>>>> Stashed changes
     </servlet>
     <servlet-mapping>
         <servlet-name>PesquisaClienteController</servlet-name>
@@ -170,7 +169,6 @@
         <url-pattern>/ManterDevolucaoController</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-<<<<<<< Updated upstream
         <servlet-name>ManterItensVendaController</servlet-name>
         <url-pattern>/ManterItensVendaController</url-pattern>
     </servlet-mapping>
@@ -185,10 +183,12 @@
     <servlet-mapping>
         <servlet-name>PesquisaItensOrdemController</servlet-name>
         <url-pattern>/PesquisaItensOrdemController</url-pattern>
-=======
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>ManterEnderecoController</servlet-name>
         <url-pattern>/ManterEnderecoController</url-pattern>
     </servlet-mapping>
+    
     <servlet-mapping>
         <servlet-name>ManterCategoriaController</servlet-name>
         <url-pattern>/ManterCategoriaController</url-pattern>
@@ -208,7 +208,6 @@
     <servlet-mapping>
         <servlet-name>PesquisaEnderecoController</servlet-name>
         <url-pattern>/PesquisaEnderecoController</url-pattern>
->>>>>>> Stashed changes
     </servlet-mapping>
     <session-config>
         <session-timeout>
