--- a/SGMC/web/WEB-INF/web.xml
+++ b/SGMC/web/WEB-INF/web.xml
@@ -108,6 +108,7 @@
         <servlet-name>TratamentoExcecao</servlet-name>
         <servlet-class>exception.TratamentoExcecao</servlet-class>
     </servlet>
+    
     <servlet-mapping>
         <servlet-name>PesquisaClienteController</servlet-name>
         <url-pattern>/PesquisaClienteController</url-pattern>
@@ -221,4 +222,12 @@
             30
         </session-timeout>
     </session-config>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/TratamentoExcecao</location>
+    </error-page>
+    <error-page>
+        <exception-type>java.lang.Exception</exception-type>
+        <location>/TratamentoExcecao</location>
+    </error-page>
 </web-app>
